# r2ghidra

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  Makefile.acr  README.md  autogen.sh  config.h.acr  config.mk.acr  configure  configure.acr  configure.bat  ghidra-processors.txt.all  ghidra-processors.txt.default  ghidra-processors.txt.x86arm  make.bat  meson.build  meson_options.txt  preconfigure  preconfigure.bat
.github/: dependabot.yml
.github/workflows/: ci.yml  coverity-scan.yml  docker.yml
cmake/: FindIaito.cmake  FindRadare2.cmake
ghidra/: CMakeLists.txt  Makefile  deps.mk  meson.build  sleigh_compile.py
ghidra/ghidra/Ghidra/Features/Decompiler/src/decompile/cpp/: context.hh  sleigh.hh  sleigh_arch.hh
iaito-plugin/: CMakeLists.txt  R2GhidraDecompiler.cpp  R2GhidraPlugin.h
scripts/: build.sh
scripts/debian/: CONFIG  Makefile  deb.mk
src/: ArchMap.cpp  ArchMap.h  CodeXMLParse.cpp  CodeXMLParse.h  Dalvik.inc.cpp  Makefile  PcodeFixupPreprocessor.cpp  PcodeFixupPreprocessor.h  PrettyXmlEncode.cpp  PrettyXmlEncode.h  R2Architecture.cpp  R2Architecture.h  R2CommentDatabase.cpp  R2CommentDatabase.h  R2LoadImage.cpp  R2LoadImage.h  R2PrintC.cpp  R2PrintC.h  R2Scope.cpp  R2Scope.h  R2TypeFactory.cpp  R2TypeFactory.h  R2Utils.h  RCoreMutex.cpp  RCoreMutex.h  SleighAnalValue.cpp  SleighAnalValue.h  SleighAsm.cpp  SleighAsm.h  SleighInstruction.cpp  SleighInstruction.h  anal_ghidra.cpp  anal_ghidra_plugin.c  asm_ghidra.cpp  core_ghidra.cpp  core_ghidra_plugin.c  r2ghidra.h  r2harvest.cpp  r2harvest.h  winuser.h
src/fidb/: Makefile  fidbf2r2.c  r2fidb.c
subprojects/: Makefile  Makefile.dist  autogen.sh  ghidra-native.mk  ghidra-native.wrap  pugixml.mk  pugixml.wrap  zlib-deps.mk  zlib.mk  zlib.wrap
subprojects/packagefiles/ghidra-native/: meson.build
subprojects/packagefiles/ghidra-native/patches/: 0001-space-after-comma.patch  0002-make-sleigharch-public.patch  0004-public-fields.patch  0006-readonly-warning.patch  0010-null-subflow.patch  0020-Fix-double-free-crash-when-deinitializing-multiple-X.patch  0022-Show-noreturn-information-in-function-signature-2.patch.disabled  0023-Undef-LoadImage-for-windows.patch  0024-ignore-symbol-beyond-space.patch  0030-fix-infinite-loop.patch  0044-bad-unicode-codepoint.patch  0055-datatype-clone.patch  0056-nullderef-workaround.patch  0080-getparent-flow.patch  0090-nocasts-warnings.patch  0091-decompiler-xml-packer.patch  0092-badvar-segfault.patch  0093-no-virtual-destructor.patch  0100-CHAR-windows.patch  0101-whichTrial-1byte.patch  ghidra-native.patch
subprojects/packagefiles/ghidra-native/patches/Attic/: 0007-Add-some-Formatting-Options.patch  0009-Make-some-PrintC-methods-virtual.patch  0010-Add-Setter-for-NL-before-else.patch  0011-Clean-Sleigh-Descriptions-on-Shutdown.patch  0013-Fix-Build-with-G-4.9.2.patch  0014-Fix-std-vector-oob-access-in-StringManager-saveXml.patch  0016-Export-two-private-field-to-SLEIGH-plugin.-4.patch  0018-Add-FreeBSD-and-OpenBSD-support-6.patch  0021-Fail-gently-in-PrintC-when-a-Basic-Block-gives-an-in.patch
subprojects/packagefiles/ghidra-native/patches/Attic/done/: 0008-Make-Commas-less-ugly.patch  0012-Make-SleighArchitecture-Langs-public.patch  0017-Make-getBaseState-return-a-pointer-5.patch
subprojects/packagefiles/pugixml/: meson.build
subprojects/packagefiles/zlib/: meson.build
sys/: download-artifacts.sh
test/: Makefile
test/bins/: Makefile  arm-stackchk.c  arm64-tailcall-local.c  mk-boa-mips-mini.py  objc-employee  types.h
test/bins/elf/: arm-stackchk  bashbot.arm.gcc.O0.elf  boa-mips  boa-mips-mini  crackme0x05  ppc32-e500mc-isel  ppc32-sda  ppc64-isel  ppc64v1-crc32_generic.ko  ppc64v1-printf-vararg  ppc64v1-vararg
test/bins/mach0/: arg
test/bins/prg/: t01.prg
test/db/attic/: ghidra  r2ghidra
test/db/extras/: anal_ghidra  ghidra  ghidra_arch  ghidra_output  ghidra_types  r2ghidra  r2ghidra_arch  r2ghidra_output  r2ghidra_types
